# base

./: build.sh  meson.build  run.sh
include/: base.h  color.h
src/: color.c  main.c  meson.build
